Implemented global exception handling, added new endpoints for post and delete, updated existing endpoints